work on html and css

--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,14 @@
 <body>
   <h1>True Self</h1>
   <label class="switch">
-    <input type="checkbox" onclick="">
+    <input type="checkbox">
     <span class="slider round"></span>
   </label>
-  <input class="name" placeholder="Dead Name">
-  <input class="name-replace" placeholder="True Name">
+  <div class="input-container">
+    <input class="name" placeholder="Dead Name">
+    <input class="name-replace" placeholder="True Name">
+  </div>
+
 </body>
 
 </html>
