--- a/options.html
+++ b/options.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>trueSelf controls</title>
-  <link rel="stylesheet" type="text/css" href="popup.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Embedded Options</title>
 </head>
 
 <body>
-  <h1>True Self</h1>
   <label id="input" class="switch">
     <input type="checkbox">
     <span class="slider round"></span>
@@ -16,7 +17,6 @@
     <input class="name" placeholder="Dead Name">
     <input class="name-replace" placeholder="True Name">
   </div>
-
 </body>
 
 </html>
