listeners working -- all wired up

--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,21 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>trueSelf controls</title>
-  <link rel="stylesheet" type="text/css" href="popup.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Embedded Options</title>
+  <link rel="stylesheet" type="text/css" href="popup.css" />
+  <script type="text/javascript" src="popup.js"></script>
 </head>
 
 <body>
-  <h1>True Self</h1>
-  <label id="input" class="switch">
-    <input type="checkbox">
-    <span class="slider round"></span>
-  </label>
   <div class="input-container">
-    <input class="name" placeholder="Dead Name">
-    <input class="name-replace" placeholder="True Name">
+    <input type="text" class="old-name" placeholder="Given Name">
+    <input type="text" class="new-name" placeholder="True Self">
   </div>
-
+  <button class="submit">Submit</button>
 </body>
 
 </html>
