all handlers working --- working on regex replace

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,12 @@
     <input type="text" class="old-name" placeholder="Given Name">
     <input type="text" class="new-name" placeholder="True Self">
   </div>
-  <button class="submit">Submit</button>
+  <label class="switch">
+    <input type="checkbox" class="submit">
+    <span class="slider round"></span>
+  </label>
+  <button class="close">Close</button>
+
 </body>
 
 </html>
