--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
   <label class="switch">
     <input type="checkbox" class="submit">
     <span class="slider round"></span>
-    <button class="close">Close</button>
+    <button class="close">Apply</button>
   </label>
 
 </body>
