--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="input-container">
-    <input type="text" class="old-name" placeholder="Given Name">
+    <input type="text" class="dead-name" placeholder="Dead Name">
     <input type="text" class="new-name" placeholder="True Self">
   </div>
   <label class="switch">
